[gd_scene load_steps=24 format=3 uid="uid://bxuuwmlma1xmm"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_15kp8"]
[ext_resource type="PackedScene" uid="uid://t35pb2ajkk0d" path="res://node_classes/spawner/spawn_manager.tscn" id="3_opaq1"]
[ext_resource type="PackedScene" uid="uid://nf2q1p0e06qp" path="res://scenes/parallax_background.tscn" id="4_2sncd"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="4_jnuwh"]
[ext_resource type="Script" path="res://scripts/game_area.gd" id="5_o6sog"]
[ext_resource type="Script" path="res://scripts/main_lighting.gd" id="9_405bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eobj"]
size = Vector2(1880, 2560)

[sub_resource type="Curve2D" id="Curve2D_i8pr7"]
_data = {
"points": PackedVector2Array(-2981.09, -2595.11, 2981.09, 2595.11, 550, 0, -2321.98, 4260.9, 2321.98, -4260.9, 527, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_3n3oa"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 3000, 1000, 1, 0, 3000, 13.1697, -2604.32, 0, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_k1tbs"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 2000, 1000, 1, 400, 0, -400, 0, 499, 2265, -400, 0, 400, 0, 471, 955, 400, 0, -400, 0, 501, 2264, 0, 2000, 13.1697, -2604.32, 0, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_cq5vr"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 2000, 1000, 1, 400, 0, -400, 0, 468, 2301, -500, 0, 500, 0, 465, 503, 400, 0, -400, 0, 499, 2265, -400, 0, 400, 0, 471, 955, 400, 0, -400, 0, 501, 2264, 0, 2000, 13.1697, -2604.32, 0, 0)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_63lxy"]
_data = {
"points": PackedVector2Array(-740.749, -3004.57, 1500, 3000, 550, 0, -1500, 3000, 1079.12, -2958.85, 527, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_h3txw"]
_data = {
"points": PackedVector2Array(-1011.81, -1909.23, 1000, 1900, 471, 10, 444, 0, -444, 0, 470, 2254, -777, 0, 777, 0, 471, 955, 400, 0, -400, 0, 501, 2264, -1000, 2000, 13.1697, -2604.32, 438, 12)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_yli8u"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 1000, 2000, 496, 0, 400, 0, -400, 0, 481, 2273, -500, 0, 500, 0, 465, 503, 598.839, -11.3622, -598.839, 11.3622, 499, 2265, -695.418, 22.7245, 695.418, -22.7245, 471, 955, 400, 0, -400, 0, 501, 2264, -1000, 2000, 13.1697, -2604.32, 449, 0)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_ak3e6"]
_data = {
"points": PackedVector2Array(-740.749, -3004.57, -1500, 3000, -550, 0, 1500, 3000, 1079.12, -2958.85, -527, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_fx6la"]
_data = {
"points": PackedVector2Array(-1011.81, -1909.23, -1000, 1900, -471, 10, -444, 0, 444, 0, -470, 2254, 777, 0, -777, 0, -471, 955, -400, 0, 400, 0, -501, 2264, 1000, 2000, 13.1697, -2604.32, -438, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_1t27a"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, -1000, 2000, -496, 0, -400, 0, 400, 0, -481, 2273, 500, 0, -500, 0, -465, 503, -600, 0, 600, 0, -500, 2265, 600.58, 2.84056, -600.58, -2.84056, -471, 955, -400, 0, 400, 0, -500, 2264, 1000, 2000, 13.1697, -2604.32, -500, 0)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_66wew"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 3000, -1000, 1, 0, 3000, 13.1697, -2604.32, 0, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_2bf2y"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 2000, -1000, 1, -400, 0, 400, 0, -499, 2265, 400, 0, -400, 0, -471, 955, -400, 0, 400, 0, -501, 2264, 0, 2000, 13.1697, -2604.32, 0, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_aq2ud"]
_data = {
"points": PackedVector2Array(16.4622, -2676.75, 0, 2000, -1000, 1, -400, 0, 400, 0, -468, 2301, 500, 0, -500, 0, -465, 503, -400, 0, 400, 0, -499, 2265, 400, 0, -400, 0, -471, 955, -400, 0, 400, 0, -501, 2264, 0, 2000, 13.1697, -2604.32, 0, 0)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_cvvey"]
_data = {
"points": PackedVector2Array(-740.749, -3004.57, -2981, 2595, -550, 0, 2321, 4260, 1079.12, -2958.85, -527, 0)
}
point_count = 2

[sub_resource type="Gradient" id="Gradient_dv10i"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2vd6a"]
gradient = SubResource("Gradient_dv10i")
width = 100
height = 100
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Level" type="Node2D"]
script = ExtResource("1_15kp8")

[node name="SpawnManager" parent="." instance=ExtResource("3_opaq1")]

[node name="GameArea" type="Area2D" parent="SpawnManager"]
position = Vector2(540, 980)
collision_layer = 128
collision_mask = 14
script = ExtResource("5_o6sog")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnManager/GameArea"]
shape = SubResource("RectangleShape2D_3eobj")
debug_color = Color(0, 0.6, 0.701961, 0)
metadata/_edit_lock_ = true

[node name="ViewLayers" type="Node2D" parent="."]

[node name="BottomLayer" type="Node2D" parent="ViewLayers"]

[node name="ShipsLayer" type="Node2D" parent="ViewLayers"]

[node name="SpawnPoints" type="Node2D" parent="ViewLayers/ShipsLayer"]

[node name="-5" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(-460, 1620)

[node name="-4" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(-460, 980)

[node name="-3" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(-460, 340)

[node name="-2" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(-460, -360)

[node name="Paths" type="Node" parent="ViewLayers/ShipsLayer/SpawnPoints/-2"]

[node name="down_right_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/-2/Paths"]
position = Vector2(-900, -50)
rotation = -0.584685
curve = SubResource("Curve2D_i8pr7")

[node name="-1" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(70, -360)

[node name="Paths" type="Node" parent="ViewLayers/ShipsLayer/SpawnPoints/-1"]

[node name="down_right_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/-1/Paths"]
position = Vector2(70, -360)
curve = SubResource("Curve2D_3n3oa")

[node name="down_right_loop_once_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/-1/Paths"]
position = Vector2(70, -360)
curve = SubResource("Curve2D_k1tbs")

[node name="down_right_loop_twice_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/-1/Paths"]
position = Vector2(70, -360)
curve = SubResource("Curve2D_cq5vr")

[node name="0" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(540, -360)

[node name="Paths" type="Node" parent="ViewLayers/ShipsLayer/SpawnPoints/0"]

[node name="down_right_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(0, -360)
curve = SubResource("Curve2D_63lxy")

[node name="down_right_loop_once_up_left" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(70, -360)
curve = SubResource("Curve2D_h3txw")

[node name="down_loop_twice_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(74, -360)
curve = SubResource("Curve2D_yli8u")

[node name="down_left_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(1100, -360)
curve = SubResource("Curve2D_ak3e6")

[node name="down_left_loop_once_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(1020, -360)
curve = SubResource("Curve2D_fx6la")

[node name="down_left_loop_twice_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/0/Paths"]
position = Vector2(1050, -360)
curve = SubResource("Curve2D_1t27a")

[node name="1" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(1010, -360)

[node name="Paths" type="Node" parent="ViewLayers/ShipsLayer/SpawnPoints/1"]

[node name="down_left_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/1/Paths"]
position = Vector2(1010, -360)
curve = SubResource("Curve2D_66wew")

[node name="down_left_loop_once_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/1/Paths"]
position = Vector2(1010, -360)
curve = SubResource("Curve2D_2bf2y")

[node name="down_left_loop_twice_up_right" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/1/Paths"]
position = Vector2(1010, -360)
curve = SubResource("Curve2D_aq2ud")

[node name="2" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(1540, -360)

[node name="Paths" type="Node" parent="ViewLayers/ShipsLayer/SpawnPoints/2"]

[node name="down_left_up_right2" type="Path2D" parent="ViewLayers/ShipsLayer/SpawnPoints/2/Paths"]
position = Vector2(2000, -50)
rotation = 0.584685
curve = SubResource("Curve2D_cvvey")

[node name="3" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(1540, 340)

[node name="4" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(1540, 980)

[node name="5" type="Marker2D" parent="ViewLayers/ShipsLayer/SpawnPoints"]
position = Vector2(1540, 1620)

[node name="PlayerLayer" type="Node2D" parent="ViewLayers"]
z_index = -111

[node name="TopLayer" type="Node2D" parent="ViewLayers"]
z_index = 999

[node name="ShotsLayer" type="Node2D" parent="ViewLayers"]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_jnuwh")

[node name="ParallaxBackground" parent="Camera2D" instance=ExtResource("4_2sncd")]

[node name="Lights" type="Node2D" parent="Camera2D"]
script = ExtResource("9_405bv")
metadata/_edit_lock_ = true

[node name="Blue" type="PointLight2D" parent="Camera2D/Lights"]
position = Vector2(-105, 2201)
scale = Vector2(17.5469, 17.9219)
color = Color(0, 0.752941, 0.878431, 1)
energy = 4.0
texture = SubResource("GradientTexture2D_2vd6a")
texture_scale = 3.33
metadata/_edit_lock_ = true

[node name="Red" type="PointLight2D" parent="Camera2D/Lights"]
position = Vector2(1473, 517)
scale = Vector2(17.5469, 17.9219)
color = Color(1, 0.466667, 0.396078, 1)
energy = 3.0
texture = SubResource("GradientTexture2D_2vd6a")
texture_scale = 4.23
metadata/_edit_lock_ = true

[node name="Yellow" type="PointLight2D" parent="Camera2D/Lights"]
position = Vector2(-112, 340)
scale = Vector2(17.5469, 17.9219)
color = Color(1, 1, 0.498039, 1)
energy = 3.0
texture = SubResource("GradientTexture2D_2vd6a")
texture_scale = 3.0
metadata/_edit_lock_ = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Camera2D/Lights"]
position = Vector2(-360, -90)
rotation = -1.69995
blend_mode = 2
height = 0.55
metadata/_edit_lock_ = true

[connection signal="area_exited" from="SpawnManager/GameArea" to="SpawnManager/GameArea" method="_on_exited"]
[connection signal="body_exited" from="SpawnManager/GameArea" to="SpawnManager/GameArea" method="_on_exited"]
